@@ -1,3 +1,10 @@
+2002-02-18  Timothy Daly  <remote_bob@yahoo.com>
+
+	* binutils-all/readelf.r: Change expected output to match new,
+	narrowed-to-80-chars format.
+	* binutils-all/readelf.r-64: Change expected output to match new,
+	narrowed-to-80-chars format.
+
 2002-02-18  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* binutils-all/objcopy.exp
